Refactor alchemy configuration and enhance Ditto integration
- Updated `alchemy.run.ts` to include a new Durable Object for Ditto jobs and improved worker bindings.
- Modified `package.json` to add `ditto-ai` as a workspace dependency and updated `alchemy` version to 0.78.0.
- Adjusted `drizzle.config.ts` to change migration output directory.
- Enhanced README with new project structure and development instructions.
- Updated `data.remote.ts` to include a new query function for running Ditto jobs.
- Improved UI in `+page.svelte` to showcase Ditto features and use cases.
- Added new icons and updated `app.html` for better branding.
- Removed unused favicon file.
- Updated worker code to handle Ditto job orchestration and model responses.

--- a/worker/package.json
+++ b/worker/package.json
@@ -2,5 +2,9 @@
   "name": "worker",
   "version": "0.0.0",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "effect": "^3.0.0",
+    "ditto-ai": "workspace:*"
+  }
 }
