--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ditto",
   "version": "0.0.1",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "alchemy dev",
-    "deploy": "alchemy deploy",
-    "destroy": "alchemy destroy",
+    "dev": "bash scripts/kill-dev-ports.sh && alchemy dev",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
@@ -17,6 +18,8 @@
     "db:studio": "drizzle-kit studio",
     "db:local": "wrangler d1 migrations apply ditto-db --local",
     "db:remote": "wrangler d1 migrations apply ditto-db --remote",
+    "deploy": "alchemy deploy",
+    "destroy": "alchemy destroy",
     "update-vendor-repos": "bash scripts/update-vendor-repos.sh"
   },
   "devDependencies": {
@@ -25,15 +28,16 @@
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/vite": "^4.1.17",
     "drizzle-kit": "^0.31.7",
-    "svelte": "^5.43.12",
+    "svelte": "^5.43.13",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
   },
   "dependencies": {
-    "alchemy": "^0.77.5",
+    "alchemy": "^0.78.0",
     "better-auth": "1.3.34",
-    "drizzle-orm": "^0.44.7"
+    "drizzle-orm": "^0.44.7",
+    "ditto-ai": "workspace:*"
   },
   "type": "module"
 }
