Add svelte-highlight dependency and enhance README with usage examples
- Added `svelte-highlight` as a dependency in `package.json` and `bun.lock`.
- Updated `README.md` to include detailed usage instructions for the `ditto-ai` package, highlighting parallel execution and consensus merging features.
- Improved the demo app's UI in `+page.svelte` by integrating syntax highlighting for code examples and enhancing the overall layout.
- Added new sections in the README for quick start, features, and architecture to provide clearer guidance for users.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "drizzle-kit": "^0.31.7",
     "svelte": "^5.43.13",
+    "svelte-highlight": "^7.9.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
