--- a/packages/ditto-ai/package.json
+++ b/packages/ditto-ai/package.json
@@ -41,7 +41,19 @@
     "orchestration",
     "durable-objects"
   ],
+  "author": "Jordan Coeyman",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ditto-run/ditto-ai.git"
+  },
+  "homepage": "https://ditto.run",
+  "bugs": {
+    "url": "https://github.com/ditto-run/ditto-ai/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "effect": "^3.0.0"
   },
