--- a/packages/ditto-ai/package.json
+++ b/packages/ditto-ai/package.json
@@ -47,7 +47,7 @@
     "type": "git",
     "url": "https://github.com/ditto-run/ditto-ai.git"
   },
-  "homepage": "https://ditto.run",
+  "homepage": "https://ditto.coey.dev",
   "bugs": {
     "url": "https://github.com/ditto-run/ditto-ai/issues"
   },
