Update `ditto-ai` to version 0.1.7 with dependency upgrades and repository URL changes
- Bumped `ditto-ai` version from 0.1.0 to 0.1.7 in `package.json`.
- Updated `effect` dependency to version 3.19.6.
- Upgraded `@types/node` to version 24.10.1.
- Changed repository and issue URLs to reflect the new GitHub location.
- Added `README.md` and `CHANGELOG.md` to the files included in the package.

--- a/packages/ditto-ai/package.json
+++ b/packages/ditto-ai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ditto-ai",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "description": "Edge-native LLM orchestration for Cloudflare Workers",
   "type": "module",
   "main": "./dist/index.js",
@@ -25,6 +25,8 @@
     }
   },
   "files": [
+    "README.md",
+    "CHANGELOG.md",
     "src",
     "dist"
   ],
@@ -45,24 +47,23 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ditto-run/ditto-ai.git"
+    "url": "git+https://github.com/acoyfellow/ditto.git"
   },
   "homepage": "https://ditto.coey.dev",
   "bugs": {
-    "url": "https://github.com/ditto-run/ditto-ai/issues"
+    "url": "https://github.com/acoyfellow/ditto/issues"
   },
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "effect": "^3.0.0"
+    "effect": "^3.19.6"
   },
   "peerDependencies": {
     "zod": "^3.0.0"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
-    "@types/node": "^22.0.0"
+    "@types/node": "^24.10.1"
   }
 }
-
